fix: [SRM-13683]: Fix metric thresholds count overlap (#13585)
* fix: [SRM-13683]: Fix metric thresholds count overlap

* fix: [SRM-13683]: Updated value with CSS variable

--- a/src/modules/85-cv/pages/health-source/common/MetricThresholds/Components/MetricThreshold.module.scss
+++ b/src/modules/85-cv/pages/health-source/common/MetricThresholds/Components/MetricThreshold.module.scss
@@ -103,6 +103,13 @@
     }
   }
 
+  &InputCount {
+    margin-right: var(--spacing-none) !important;
+    input {
+      width: 100% !important;
+    }
+  }
+
   &Criteria {
     margin-right: var(--spacing-3);
   }
